tests/snapshots/snapshots__ppt__handmade-multimaster.ppt.snap
---
source: tests/snapshots.rs
expression: output
---
- **Alpha master body text**

---

*Beta master body text*
