tests/snapshots/snapshots__ppt__handmade-sparsenotes.ppt.snap
---
source: tests/snapshots.rs
expression: output
---
First slide text

Second slide text

> Notes for the second slide
