tests/snapshots/snapshots__ppt__handmade-title.ppt.snap
---
source: tests/snapshots.rs
expression: output
---
# Legacy Deck

- **Alpha master body text**

*Beta master body text*
